kubernetes/taylorvories.com/service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: taylorvories-com
  name: taylorvories-com
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: taylorvories-com
